--- a/readme
+++ b/readme
@@ -1,27 +1,26 @@
-<h4>Location Tracker Application</h4>
+**Location Tracker Application**
 
-<h5>Installation</h5>
+**Installation**
 - Open this project using Android Studio
 - Build this project by connecting your phone to your computer then press the 'run' green arrow button.
 
-<h5>Implementation trade-offs</h5>
+**Implementation trade-offs**
 Due to time constrains
 - Simple architecture without any go to libraries
 - Unit test doesn't work correctly, as it is testing against Android api. No mocks were in used
 - Simple UI for speed
-
-<h5>Any architectural considerations and reasoning</h5>
+**Any architectural considerations and reasoning**
 - No specific architecture like MVVM or MVI, if it was a commercial project might leverage on VM and Livedata for business logic and UI change
 - Main functions are in a single activity with a utility class, as this is a poc
 
-<h5>Your areas of focus, and anything you would like to draw our attention to</h5>
+**Your areas of focus, and anything you would like to draw our attention to**
 - Demonstrates all functions are working and what a unit test would look like
 
-<h4>Any copied code, references and 3rd party libraries</h5>
+**Any copied code, references and 3rd party libraries**
 - All gps related code where found in Google's documentation
 
-<h5>How long you worked on the app for</h5>
+**How long you worked on the app for**
 - Because I was working on this after working hours, so I had people come and talk to me. Give or take, around 4 hours
 
-<h5>Anything else you want us to know</h5>
+**Anything else you want us to know**
 - Please be mindful this is a poc, so I chose to use Android api to do distance calculation therefore unit test doesn't fully work. However, in a commercial project a mock would be used.
